# ContactList

./: CMakeLists.txt  CustomBtn.qml  Main.qml  MainListDelegate.qml  MainListHeader.qml  MyAddEditListData.qml  PhoneBookAccess.cpp  PhoneBookAccess.h  main.cpp
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/values/: libs.xml
android/src/com/example/contactsdisplay/: MainActivity.java
